--- a/Resources/Private/Templates/Email/SubscribeVerify.html
+++ b/Resources/Private/Templates/Email/SubscribeVerify.html
@@ -7,7 +7,7 @@
 <body>
 <h3>Guten Tag,</h3>
 <p>um sich zu unserem Newsletter anzumelden, müssen Sie Ihre E-Mailadresse mit Klick auf diesen Link verifizieren:</p>
-<p><f:link.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}" noCacheHash="true" absolute="true"><f:uri.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}" noCacheHash="true" absolute="true" /></f:link.action></p>
+<p><f:link.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}" noCache="true" absolute="true"><f:uri.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}" noCache="true" absolute="true" /></f:link.action></p>
 <p>Mit freundlichen Grüßen<br>
 {settings.company}</p>
 </body>
