--- a/Resources/Private/Templates/Email/SubscribeVerify1.html
+++ b/Resources/Private/Templates/Email/SubscribeVerify1.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h3>Hello,</h3>
-<p>you need to klick at the verify link to verify your email-address:</p>
-<p><f:link.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}" noCacheHash="true" absolute="true"><f:uri.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}" noCacheHash="true" absolute="true" /></f:link.action></p>
+<p>you need to click at the verify link to verify your email-address:</p>
+<p><f:link.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}" noCache="true" absolute="true"><f:uri.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}" noCache="true" absolute="true" /></f:link.action></p>
 <p>Best regards<br>
 {settings.company}</p>
 </body>
