--- a/Resources/Private/Partials/FormErrors.html
+++ b/Resources/Private/Partials/FormErrors.html
@@ -7,7 +7,7 @@
 				<br>{f:translate(key: 'error_email', default: 'wrong email')}
 			</f:if>
 			<f:if condition="{propertyPath} == 'log.gdpr'">
-				<br>{f:translate(key: 'error_gdpr', default: 'wrong email')}
+				<br>{f:translate(key: 'error_gdpr', default: 'gdpr missing')}
 			</f:if>
 		</f:for>
 		</div>
