--- a/Resources/Private/Templates/Email/UnsubscribeToAdmin.html
+++ b/Resources/Private/Templates/Email/UnsubscribeToAdmin.html
@@ -5,11 +5,11 @@
 <title>Newsletter</title>
 </head>
 <body>
-<h3>Hello,</h3>
-<p>this user wants to sub- or unsubscribe from the newsletter:</p>
+<h3>Guten Tag,</h3>
+<p>dieser User hat sich gerade vom Newsletter abgemeldet:</p>
 <p>Name: {gender} {title} {firstname} {lastname}</p>
 <p>E-Mail: <a href="mailto:{email}">{email}</a></p>
-<p>Best regards<br>
+<p>Mit freundlichen Grüßen<br>
 {settings.company}</p>
 </body>
 </html>
