--- a/Resources/Private/Templates/Email/UserToAdmin.html
+++ b/Resources/Private/Templates/Email/UserToAdmin.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h3>Guten Tag,</h3>
-<p>dieser User möchte sich gerne An- oder Abmelden:</p>
+<p>dieser User möchte sich gerne an- oder abmelden:</p>
 <p>Name: {gender} {title} {firstname} {lastname}</p>
 <p>E-Mail: <a href="mailto:{email}">{email}</a></p>
 <p>Mit freundlichen Grüßen<br>
