--- a/Resources/Private/Templates/Email/SubscribeVerify1.html
+++ b/Resources/Private/Templates/Email/SubscribeVerify1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Newsletter</title>
+<title>Newsletter subscription</title>
 </head>
 <body>
 <h3>Hello,</h3>
