--- a/Resources/Private/Templates/Email/UnsubscribeVerify.html
+++ b/Resources/Private/Templates/Email/UnsubscribeVerify.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Newsletter</title>
+<title>Newsletter-Abmeldung</title>
 </head>
 <body>
 <h3>Guten Tag,</h3>
