--- a/Resources/Private/Templates/Email/SubscribeVerify.html
+++ b/Resources/Private/Templates/Email/SubscribeVerify.html
@@ -6,14 +6,15 @@
 </head>
 <body>
 <h3>
-    <f:if condition="{gender}">
+    <f:if condition="{gender} && {lastname}">
         <f:then>
-            <f:translate key="email.dear-gender-first-and-last-name"
-                         arguments="{0: gender, 1: firstname, 2: lastname}" />
+            <f:translate key="email.dear-gender-first-and-last-name" arguments="{0: gender, 1: firstname, 2: lastname}" />
         </f:then>
+        <f:else if="{lastname}">
+            <f:translate key="email.dear-first-and-last-name" arguments="{1: firstname, 2: lastname}" />
+        </f:else>
         <f:else>
-            <f:translate key="email.dear-first-and-last-name"
-                         arguments="{1: firstname, 2: lastname}" />
+            <f:translate key="email.dear" />
         </f:else>
     </f:if>
 </h3>
