--- a/Resources/Private/Templates/Email/Unsubscribed.html
+++ b/Resources/Private/Templates/Email/Unsubscribed.html
@@ -5,7 +5,19 @@
 <title>Newsletter-Abmeldung</title>
 </head>
 <body>
-<h3>Guten Tag,</h3>
+<h3>
+    <f:if condition="{gender} && {lastname}">
+        <f:then>
+            <f:translate key="email.dear-gender-first-and-last-name" arguments="{0: gender, 1: firstname, 2: lastname}" />
+        </f:then>
+        <f:else if="{lastname}">
+            <f:translate key="email.dear-first-and-last-name" arguments="{1: firstname, 2: lastname}" />
+        </f:else>
+        <f:else>
+            <f:translate key="email.dear" />
+        </f:else>
+    </f:if>
+</h3>
 <p>Sie haben sich nun erfolgreich von unserem Newsletter abgemeldet.</p>
 <p>Verwendete E-Mail-Adresse: {email}</p>
 <p>Mit freundlichen Grüßen<br>
