--- a/Resources/Private/Templates/Email/Unsubscribed1.html
+++ b/Resources/Private/Templates/Email/Unsubscribed1.html
@@ -5,7 +5,19 @@
 <title>Newsletter-Unsubscription</title>
 </head>
 <body>
-<h3>Hello,</h3>
+<h3>
+    <f:if condition="{gender} && {lastname}">
+        <f:then>
+            <f:translate key="email.dear-gender-first-and-last-name" arguments="{0: gender, 1: firstname, 2: lastname}" />
+        </f:then>
+        <f:else if="{lastname}">
+            <f:translate key="email.dear-first-and-last-name" arguments="{1: firstname, 2: lastname}" />
+        </f:else>
+        <f:else>
+            <f:translate key="email.dear" />
+        </f:else>
+    </f:if>
+</h3>
 <p>you are now unsubscribed from our newsletter.</p>
 <p>Used email-address: {email}</p>
 <p>Best regards<br>
