--- a/Resources/Private/Templates/Email/SubscribeVerify1.html
+++ b/Resources/Private/Templates/Email/SubscribeVerify1.html
@@ -19,7 +19,7 @@
     </f:if>
 </h3>
 <p>you need to click at the verify link to verify your email-address:</p>
-<p><f:link.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}" noCache="1" absolute="1"><f:format.raw><f:uri.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}" noCache="1" absolute="1" /></f:format.raw></f:link.action></p>
+<p><f:link.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}" absolute="1"><f:format.raw><f:uri.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}" absolute="1" /></f:format.raw></f:link.action></p>
 <p>Best regards<br>
 {settings.company}</p>
 </body>
