Add missing case of log.status

--- a/Resources/Private/Templates/Widget/RecentLogEntries.html
+++ b/Resources/Private/Templates/Widget/RecentLogEntries.html
@@ -32,6 +32,7 @@
                         <f:case value="4">{f:translate(key: 'LLL:EXT:fp_newsletter/Resources/Private/Language/locallang_db.xlf:tx_fpnewsletter_domain_model_log.status.4')}</f:case>
                         <f:case value="5">{f:translate(key: 'LLL:EXT:fp_newsletter/Resources/Private/Language/locallang_db.xlf:tx_fpnewsletter_domain_model_log.status.5')}</f:case>
                         <f:case value="6">{f:translate(key: 'LLL:EXT:fp_newsletter/Resources/Private/Language/locallang_db.xlf:tx_fpnewsletter_domain_model_log.status.6')}</f:case>
+                        <f:case value="7">{f:translate(key: 'LLL:EXT:fp_newsletter/Resources/Private/Language/locallang_db.xlf:tx_fpnewsletter_domain_model_log.status.7')}</f:case>
                         <f:defaultCase>{log.status}</f:defaultCase>
                     </f:switch>
                 </td>
