--- a/Resources/Private/Templates/Email/UnsubscribeVerify1.html
+++ b/Resources/Private/Templates/Email/UnsubscribeVerify1.html
@@ -20,6 +20,12 @@
 </h3>
 <p>you need to click at the verify link to verify your unsubscription:</p>
 <p><f:link.action pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe" arguments="{uid: uid, hash: hash}" absolute="1"><f:format.raw><f:uri.action pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe" arguments="{uid: uid, hash: hash}" absolute="1" /></f:format.raw></f:link.action></p>
+<f:form pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe" absolute="1" method="POST">
+    <f:form.hidden name="uid" value="{uid}"/>
+    <f:form.hidden name="hash" value="{hash}"/>
+    <p>Alternativ können Sie auch auf diesen Button klicken:</p>
+    <f:form.submit value="Verify email address" />
+</f:form>
 <p>Best regards<br>
 {settings.company}</p>
 </body>
