--- a/Resources/Private/Templates/Email/UserToAdmin.html
+++ b/Resources/Private/Templates/Email/UserToAdmin.html
@@ -5,11 +5,11 @@
 <title>Newsletter</title>
 </head>
 <body>
-<h3>Guten Tag,</h3>
-<p>dieser User möchte sich gerne an- oder abmelden:</p>
-<p>Name: {gender} {title} {firstname} {lastname}</p>
-<p>E-Mail: <a href="mailto:{email}">{email}</a></p>
-<p>Mit freundlichen Grüßen<br>
+<h3><f:translate key="email.dear" /></h3>
+<p><f:translate key="email.toAdminWantsTo" /></p>
+<p><f:translate key="email.name" /> {gender} {title} {firstname} {lastname}</p>
+<p><f:translate key="email.usedEmail" /> <a href="mailto:{email}">{email}</a></p>
+<p><f:translate key="email.bestRegards" /><br>
 {settings.company}</p>
 </body>
 </html>
