--- a/Resources/Private/Templates/Email/SubscribeVerify0.html
+++ b/Resources/Private/Templates/Email/SubscribeVerify0.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title><f:translate key="email.subscription" /></title>
+<title>Newsletter-Anmeldung</title>
 </head>
 <body>
 <h3>
@@ -18,14 +18,14 @@
         </f:else>
     </f:if>
 </h3>
-<p><f:translate key="email.pleaseVerify" /></p>
+<p>um sich zu unserem Newsletter anzumelden, müssen Sie Ihre E-Mail-Adresse mit Klick auf diesen Link verifizieren:</p>
 <p><f:link.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify"
                   arguments="{uid: uid, hash: hash}" absolute="1"><f:format.raw><f:uri.action pageUid="{subscribeVerifyUid}"
                   extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}"
                   absolute="1" /></f:format.raw></f:link.action></p>
 <p><f:link.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify"
-                  arguments="{uid: uid, hash: hash}" absolute="1" style="border:1px solid #000;border-radius:3px;padding:2px 10px;"><f:translate key="email.alternative" /></f:link.action></p>
-<p><f:translate key="email.bestRegards" /><br>
+                  arguments="{uid: uid, hash: hash}" absolute="1" style="border:1px solid #000;border-radius:3px;padding:2px 10px;">Alternativ können Sie auch auf diesen Button klicken</f:link.action></p>
+<p>Mit freundlichen Grüßen<br>
 {settings.company}</p>
 </body>
 </html>
