--- a/Resources/Private/Templates/Email/UnsubscribeVerify0.html
+++ b/Resources/Private/Templates/Email/UnsubscribeVerify0.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Newsletter unsubscription</title>
+<title>Newsletter-Abmeldung</title>
 </head>
 <body>
 <h3>
@@ -18,11 +18,11 @@
         </f:else>
     </f:if>
 </h3>
-<p>you need to click at the verify link to verify your unsubscription:</p>
+<p>um sich von unserem Newsletter abzumelden, müssen Sie Ihre E-Mail-Adresse mit Klick auf diesen Link verifizieren:</p>
 <p><f:link.action pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe" arguments="{uid: uid, hash: hash}" absolute="1"><f:format.raw><f:uri.action pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe" arguments="{uid: uid, hash: hash}" absolute="1" /></f:format.raw></f:link.action></p>
 <p><f:link.action pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe"
-                  arguments="{uid: uid, hash: hash}" absolute="1" style="border:1px solid #000;border-radius:3px;padding:2px 10px;">Alternatively, you can also click on this button</f:link.action></p>
-<p>Best regards<br>
+                  arguments="{uid: uid, hash: hash}" absolute="1" style="border:1px solid #000;border-radius:3px;padding:2px 10px;">Alternativ können Sie auch auf diesen Button klicken</f:link.action></p>
+<p>Mit freundlichen Grüßen<br>
 {settings.company}</p>
 </body>
 </html>
