--- a/Resources/Private/Templates/Email/Unsubscribed0.html
+++ b/Resources/Private/Templates/Email/Unsubscribed0.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title><f:translate key="email.unsubscription" /></title>
+<title>Newsletter-Abmeldung</title>
 </head>
 <body>
 <h3>
@@ -18,9 +18,9 @@
         </f:else>
     </f:if>
 </h3>
-<p><f:translate key="email.unsubscribedSuccess" /></p>
-<p><f:translate key="email.usedEmail" /> {email}</p>
-<p><f:translate key="email.bestRegards" /><br>
+<p>Sie haben sich nun erfolgreich von unserem Newsletter abgemeldet.</p>
+<p>Verwendete E-Mail-Adresse: {email}</p>
+<p>Mit freundlichen Grüßen<br>
 {settings.company}</p>
 </body>
 </html>
