--- a/Resources/Private/Templates/Email/UnsubscribeVerify0.html
+++ b/Resources/Private/Templates/Email/UnsubscribeVerify0.html
@@ -5,19 +5,7 @@
 <title>Newsletter-Abmeldung</title>
 </head>
 <body>
-<h3>
-    <f:if condition="{gender} && {lastname}">
-        <f:then>
-            <f:translate key="email.dear-gender-first-and-last-name" arguments="{0: gender, 1: firstname, 2: lastname}" />
-        </f:then>
-        <f:else if="{lastname}">
-            <f:translate key="email.dear-first-and-last-name" arguments="{1: firstname, 2: lastname}" />
-        </f:else>
-        <f:else>
-            <f:translate key="email.dear" />
-        </f:else>
-    </f:if>
-</h3>
+<f:render partial="Email/Salutation" arguments="{_all}" />
 <p>um sich von unserem Newsletter abzumelden, müssen Sie Ihre E-Mail-Adresse mit Klick auf diesen Link verifizieren:</p>
 <p><f:link.action pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe" arguments="{uid: uid, hash: hash}" absolute="1"><f:format.raw><f:uri.action pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe" arguments="{uid: uid, hash: hash}" absolute="1" /></f:format.raw></f:link.action></p>
 <p><f:link.action pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe"
