--- a/Resources/Private/Templates/Email/Unsubscribed.html
+++ b/Resources/Private/Templates/Email/Unsubscribed.html
@@ -5,19 +5,7 @@
 <title><f:translate key="email.unsubscription" /></title>
 </head>
 <body>
-<h3>
-    <f:if condition="{gender} && {lastname}">
-        <f:then>
-            <f:translate key="email.dear-gender-first-and-last-name" arguments="{0: gender, 1: firstname, 2: lastname}" />
-        </f:then>
-        <f:else if="{lastname}">
-            <f:translate key="email.dear-first-and-last-name" arguments="{1: firstname, 2: lastname}" />
-        </f:else>
-        <f:else>
-            <f:translate key="email.dear" />
-        </f:else>
-    </f:if>
-</h3>
+<f:render partial="Email/Salutation" arguments="{_all}" />
 <p><f:translate key="email.unsubscribedSuccess" /></p>
 <p><f:translate key="email.usedEmail" /> {email}</p>
 <p><f:translate key="email.bestRegards" /><br>
