--- a/Resources/Private/Templates/Widget/RecentLogEntries.html
+++ b/Resources/Private/Templates/Widget/RecentLogEntries.html
@@ -34,6 +34,8 @@
                         <f:case value="6">{f:translate(key: 'LLL:EXT:fp_newsletter/Resources/Private/Language/locallang_db.xlf:tx_fpnewsletter_domain_model_log.status.6')}</f:case>
                         <f:case value="7">{f:translate(key: 'LLL:EXT:fp_newsletter/Resources/Private/Language/locallang_db.xlf:tx_fpnewsletter_domain_model_log.status.7')}</f:case>
                         <f:case value="8">{f:translate(key: 'LLL:EXT:fp_newsletter/Resources/Private/Language/locallang_db.xlf:tx_fpnewsletter_domain_model_log.status.8')}</f:case>
+                        <f:case value="10">{f:translate(key: 'LLL:EXT:fp_newsletter/Resources/Private/Language/locallang_db.xlf:tx_fpnewsletter_domain_model_log.status.10')}</f:case>
+                        <f:case value="11">{f:translate(key: 'LLL:EXT:fp_newsletter/Resources/Private/Language/locallang_db.xlf:tx_fpnewsletter_domain_model_log.status.11')}</f:case>
                         <f:defaultCase>{log.status}</f:defaultCase>
                     </f:switch>
                 </td>
