--- a/Resources/Private/Partials/Email/Salutation.html
+++ b/Resources/Private/Partials/Email/Salutation.html
@@ -1,13 +1,13 @@
 <h3>
     <f:if condition="({gender_id}==1 || {gender_id}==2) && {lastname}">
         <f:then>
-            <f:translate key="email.dear-gender-first-and-last-name" arguments="{0: gender, 1: firstname, 2: lastname}" />
+            <f:translate key="email.dear-gender-first-and-last-name" arguments="{0: gender, 1: firstname, 2: lastname}" extensionName="FpNewsletter" />
         </f:then>
         <f:else if="{lastname}">
-            <f:translate key="email.dear-first-and-last-name" arguments="{1: firstname, 2: lastname}" />
+            <f:translate key="email.dear-first-and-last-name" arguments="{1: firstname, 2: lastname}" extensionName="FpNewsletter" />
         </f:else>
         <f:else>
-            <f:translate key="email.dear" />
+            <f:translate key="email.dear" extensionName="FpNewsletter" />
         </f:else>
     </f:if>
 </h3>
