--- a/Resources/Private/Templates/Email/EditLink.html
+++ b/Resources/Private/Templates/Email/EditLink.html
@@ -2,18 +2,18 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title><f:translate key="email.editSubject" extensionName="FpNewsletter" /></title>
+<title><f:translate key="email.editSubject" /></title>
 </head>
 <body>
 <f:render partial="Email/Salutation" arguments="{_all}" />
-<p><f:translate key="email.pleaseEdit" extensionName="FpNewsletter" /></p>
+<p><f:translate key="email.pleaseEdit" /></p>
 <p><f:link.action pageUid="{editUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="edit"
                   arguments="{uid: uid, hash: hash}" absolute="1"><f:format.raw><f:uri.action pageUid="{editUid}"
                   extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="edit" arguments="{uid: uid, hash: hash}"
                   absolute="1" /></f:format.raw></f:link.action></p>
 <p><f:link.action pageUid="{editUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="edit"
-                  arguments="{uid: uid, hash: hash}" absolute="1" style="border:1px solid #000;border-radius:3px;padding:2px 10px;"><f:translate key="email.alternative" extensionName="FpNewsletter" /></f:link.action></p>
-<p><f:translate key="email.bestRegards" extensionName="FpNewsletter" /><br>
+                  arguments="{uid: uid, hash: hash}" absolute="1" style="border:1px solid #000;border-radius:3px;padding:2px 10px;"><f:translate key="email.alternative" /></f:link.action></p>
+<p><f:translate key="email.bestRegards" /><br>
 {settings.company}</p>
 </body>
 </html>
