--- a/Resources/Private/Templates/Email/UserToAdmin.html
+++ b/Resources/Private/Templates/Email/UserToAdmin.html
@@ -5,11 +5,11 @@
 <title>Newsletter</title>
 </head>
 <body>
-<h3><f:translate key="email.dear" extensionName="FpNewsletter" /></h3>
-<p><f:translate key="email.toAdminWantsTo" extensionName="FpNewsletter" /></p>
-<p><f:translate key="email.name" extensionName="FpNewsletter" /> {gender} {title} {firstname} {lastname}</p>
-<p><f:translate key="email.usedEmail" extensionName="FpNewsletter" /> <a href="mailto:{email}">{email}</a></p>
-<p><f:translate key="email.bestRegards" extensionName="FpNewsletter" /><br>
+<h3><f:translate key="email.dear" /></h3>
+<p><f:translate key="email.toAdminWantsTo" /></p>
+<p><f:translate key="email.name" /> {gender} {title} {firstname} {lastname}</p>
+<p><f:translate key="email.usedEmail" /> <a href="mailto:{email}">{email}</a></p>
+<p><f:translate key="email.bestRegards" /><br>
 {settings.company}</p>
 </body>
 </html>
