--- a/Resources/Private/Templates/Email/SubscribeVerify1.html
+++ b/Resources/Private/Templates/Email/SubscribeVerify1.html
@@ -7,10 +7,10 @@
 <body>
 <f:render partial="Email/Salutation" arguments="{_all}" />
 <p>you need to click at the verify link to verify your email-address:</p>
-<p><f:link.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify"
-                  arguments="{uid: uid, hash: hash}" absolute="1"><f:format.raw><f:uri.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}" absolute="1" /></f:format.raw></f:link.action></p>
-<p><f:link.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify"
-                  arguments="{uid: uid, hash: hash}" absolute="1" style="border:1px solid #000;border-radius:3px;padding:2px 10px;">Alternatively, you can also click on this button</f:link.action></p>
+<p><f:link.external uri="{fpnl:getActionUrl(pageUid:subscribeVerifyUid, pi:'verify', action:'verify', uid:uid, hash:hash)}"
+                    target="_blank"><f:format.raw><f:uri.external uri="{fpnl:getActionUrl(pageUid:subscribeVerifyUid, pi:'verify', action:'verify', uid:uid, hash:hash)}" /></f:format.raw></f:link.external></p>
+<p><f:link.external uri="{fpnl:getActionUrl(pageUid:subscribeVerifyUid, pi:'verify', action:'verify', uid:uid, hash:hash)}"
+                    target="_blank" style="border:1px solid #000;border-radius:3px;padding:2px 10px;">Alternatively, you can also click on this button</f:link.external></p>
 <p>Best regards<br>
 {settings.company}</p>
 </body>
