--- a/Resources/Private/Templates/Email/UnsubscribeVerify0.html
+++ b/Resources/Private/Templates/Email/UnsubscribeVerify0.html
@@ -7,9 +7,10 @@
 <body>
 <f:render partial="Email/Salutation" arguments="{_all}" />
 <p>um sich von unserem Newsletter abzumelden, müssen Sie Ihre E-Mail-Adresse mit Klick auf diesen Link verifizieren:</p>
-<p><f:link.action pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe" arguments="{uid: uid, hash: hash}" absolute="1"><f:format.raw><f:uri.action pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe" arguments="{uid: uid, hash: hash}" absolute="1" /></f:format.raw></f:link.action></p>
-<p><f:link.action pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe"
-                  arguments="{uid: uid, hash: hash}" absolute="1" style="border:1px solid #000;border-radius:3px;padding:2px 10px;">Alternativ können Sie auch auf diesen Button klicken</f:link.action></p>
+<p><f:link.external uri="{fpnl:getActionUrl(pageUid:unsubscribeVerifyUid, pi:'verifyunsubscribe', action:'verifyUnsubscribe', uid:uid, hash:hash)}"
+                    target="_blank"><f:format.raw><f:uri.external uri="{fpnl:getActionUrl(pageUid:unsubscribeVerifyUid, pi:'verifyunsubscribe', action:'verifyUnsubscribe', uid:uid, hash:hash)}" /></f:format.raw></f:link.external></p>
+<p><f:link.external uri="{fpnl:getActionUrl(pageUid:unsubscribeVerifyUid, pi:'verifyunsubscribe', action:'verifyUnsubscribe', uid:uid, hash:hash)}"
+                    target="_blank" style="border:1px solid #000;border-radius:3px;padding:2px 10px;">Alternativ können Sie auch auf diesen Button klicken</f:link.external></p>
 <p>Mit freundlichen Grüßen<br>
 {settings.company}</p>
 </body>
