--- a/Resources/Private/Templates/Email/EditLink.html
+++ b/Resources/Private/Templates/Email/EditLink.html
@@ -7,9 +7,9 @@
 <body>
 <f:render partial="Email/Salutation" arguments="{_all}" />
 <p><f:translate key="email.pleaseEdit" extensionName="FpNewsletter" /></p>
-<p><f:link.external uri="{fpnl:getActionUrl(pageUid:editUid, pi:'edit', action:'edit', uid:uid, hash:hash)}"
-                    target="_blank"><f:format.raw><f:uri.external uri="{fpnl:getActionUrl(pageUid:editUid, pi:'edit', action:'edit', uid:uid, hash:hash)}" /></f:format.raw></f:link.external></p>
-<p><f:link.external uri="{fpnl:getActionUrl(pageUid:editUid, pi:'edit', action:'edit', uid:uid, hash:hash)}"
+<p><f:link.external uri="{fpnl:getActionUrl(pageUid:editUid, pi:'edit', action:'edit', uid:uid, hash:hash, languageUid:sys_language_uid)}"
+                    target="_blank"><f:format.raw><f:uri.external uri="{fpnl:getActionUrl(pageUid:editUid, pi:'edit', action:'edit', uid:uid, hash:hash, languageUid:sys_language_uid)}" /></f:format.raw></f:link.external></p>
+<p><f:link.external uri="{fpnl:getActionUrl(pageUid:editUid, pi:'edit', action:'edit', uid:uid, hash:hash, languageUid:sys_language_uid)}"
                     target="_blank" style="border:1px solid #000;border-radius:3px;padding:2px 10px;"><f:translate key="email.alternative" extensionName="FpNewsletter" /></f:link.external></p>
 <p><f:translate key="email.bestRegards" extensionName="FpNewsletter" /><br>
 {settings.company}</p>
