--- a/Resources/Private/Templates/Email/UnsubscribeVerify0.html
+++ b/Resources/Private/Templates/Email/UnsubscribeVerify0.html
@@ -7,9 +7,9 @@
 <body>
 <f:render partial="Email/Salutation" arguments="{_all}" />
 <p>um sich von unserem Newsletter abzumelden, müssen Sie Ihre E-Mail-Adresse mit Klick auf diesen Link verifizieren:</p>
-<p><f:link.external uri="{fpnl:getActionUrl(pageUid:unsubscribeVerifyUid, pi:pi, action:'verifyUnsubscribe', uid:uid, hash:hash)}"
-                    target="_blank"><f:format.raw><f:uri.external uri="{fpnl:getActionUrl(pageUid:unsubscribeVerifyUid, pi:pi, action:'verifyUnsubscribe', uid:uid, hash:hash)}" /></f:format.raw></f:link.external></p>
-<p><f:link.external uri="{fpnl:getActionUrl(pageUid:unsubscribeVerifyUid, pi:pi, action:'verifyUnsubscribe', uid:uid, hash:hash)}"
+<p><f:link.external uri="{fpnl:getActionUrl(pageUid:unsubscribeVerifyUid, pi:pi, action:'verifyUnsubscribe', uid:uid, hash:hash, languageUid:'0')}"
+                    target="_blank"><f:format.raw><f:uri.external uri="{fpnl:getActionUrl(pageUid:unsubscribeVerifyUid, pi:pi, action:'verifyUnsubscribe', uid:uid, hash:hash, languageUid:'0')}" /></f:format.raw></f:link.external></p>
+<p><f:link.external uri="{fpnl:getActionUrl(pageUid:unsubscribeVerifyUid, pi:pi, action:'verifyUnsubscribe', uid:uid, hash:hash, languageUid:'0')}"
                     target="_blank" style="border:1px solid #000;border-radius:3px;padding:2px 10px;">Alternativ können Sie auch auf diesen Button klicken</f:link.external></p>
 <p>Mit freundlichen Grüßen<br>
 {settings.company}</p>
