--- a/Resources/Private/Templates/Email/Unsubscribed.html
+++ b/Resources/Private/Templates/Email/Unsubscribed.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title><f:translate key="email.unsubscription" extensionName="FpNewsletter" /></title>
+<title><f:translate key="email.unsubscription" extensionName="FpNewsletter" languageKey="{language_code}" /></title>
 </head>
 <body>
 <f:render partial="Email/Salutation" arguments="{_all}" />
-<p><f:translate key="email.unsubscribedSuccess" extensionName="FpNewsletter" /></p>
-<p><f:translate key="email.usedEmail" extensionName="FpNewsletter" /> {email}</p>
-<p><f:translate key="email.bestRegards" extensionName="FpNewsletter" /><br>
+<p><f:translate key="email.unsubscribedSuccess" extensionName="FpNewsletter" languageKey="{language_code}" /></p>
+<p><f:translate key="email.usedEmail" extensionName="FpNewsletter" languageKey="{language_code}" /> {email}</p>
+<p><f:translate key="email.bestRegards" extensionName="FpNewsletter" languageKey="{language_code}" /><br>
 {settings.company}</p>
 </body>
 </html>
